--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -6,6 +6,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ordersRecycleView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:scrollbars="none" />
 </LinearLayout>
