--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -14,6 +14,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/servicesRecycleView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:scrollbars="none" />
 </LinearLayout>
