--- a/app/src/main/res/drawable/rating_bar.xml
+++ b/app/src/main/res/drawable/rating_bar.xml
@@ -2,11 +2,11 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/background"
-        android:drawable="@drawable/icon_star_outline_24dp" />
+        android:drawable="@drawable/icon_star_outline" />
     <item
         android:id="@+id/secondaryProgress"
-        android:drawable="@drawable/icon_star_24dp" />
+        android:drawable="@drawable/icon_star" />
     <item
         android:id="@+id/progress"
-        android:drawable="@drawable/icon_star_24dp" />
+        android:drawable="@drawable/icon_star" />
 </layer-list>
