--- a/app/src/main/res/layout/part_top_panel.xml
+++ b/app/src/main/res/layout/part_top_panel.xml
@@ -8,7 +8,7 @@
     android:background="@color/mainBlue"
     app:menu="@menu/top_navigation_menu"
     app:layout_constraintTop_toTopOf="parent"
-    app:navigationIcon="@drawable/icon_back_24dp">
+    app:navigationIcon="@drawable/icon_back">
 
     <TextView
         android:id="@+id/titleTopPanelText"
