--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/icon_profile_24dp"
+        android:icon="@drawable/icon_profile"
         android:title="Profile" />
     <item
         android:id="@+id/navigation_main"
-        android:icon="@drawable/icon_main_24dp"
+        android:icon="@drawable/icon_main"
         android:title="Profile" />
     <item
         android:id="@+id/navigation_chat"
-        android:icon="@drawable/icon_chat_24dp"
+        android:icon="@drawable/icon_dialogs"
         android:title="Profile" />
 </menu>
