--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -118,7 +118,7 @@
                                 <TextView
                                     android:id="@+id/subscribersProfileText"
                                     style="@style/profileThinText"
-                                    android:text="Подписчики: 0" />
+                                    android:text="Подписчики:" />
                             </LinearLayout>
 
                             <LinearLayout
