--- a/app/src/main/res/layout/messages.xml
+++ b/app/src/main/res/layout/messages.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/allPages"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/allPages"
     tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.chat.MessagesActivity">
 
     <include layout="@layout/part_top_panel" />
@@ -13,12 +13,12 @@
         android:id="@+id/loadingMessagesProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:indeterminateTint= "@color/mainBlue"
         android:layout_gravity="center"
+        android:indeterminateTint="@color/mainBlue"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/resultsMessagesRecycleView"
@@ -33,9 +33,9 @@
         android:id="@+id/footerEditServiceLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:background="@color/mainBlue"
-        app:layout_constraintBottom_toBottomOf="parent" >
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <EditText
             android:id="@+id/messageMessagesInput"
@@ -43,16 +43,18 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:backgroundTint="@color/mainBlue"
+            android:hint="Сообщения"
             android:inputType="textMultiLine|textCapSentences"
-            style="@style/loginInput"
-            android:hint="Сообщения"/>
+            android:textColor="@color/white"
+            android:textColorHint="@color/white50" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/sendMessageMessagesBtn"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="5"
-            android:text="se"
-            android:layout_height="wrap_content"/>
+            android:fontFamily="@font/font_awesome_solid"
+            android:text="" />
 
     </LinearLayout>
 
